# LLM-homework

./: .gitignore  pyproject.toml
01-agentic-rag/2025/0a-agents/: client_script.py  weather_server.py
01-agentic-rag/2026/: homework-2026.ipynb
01-overview/: homework-2025.ipynb
02-vector-search/: homework-2025.ipynb  homework-2026.ipynb
04-evaluation/: homework-2025.ipynb
0a-agents/: homework-2025.ipynb
workshops/dlt/: homework-2025.ipynb
workshops/dlt/db.qdrant/: meta.json
workshops/dlt/db.qdrant/collection/zoomcamp_tagged_data__dlt_loads/: storage.sqlite
workshops/dlt/db.qdrant/collection/zoomcamp_tagged_data__dlt_pipeline_state/: storage.sqlite
workshops/dlt/db.qdrant/collection/zoomcamp_tagged_data__dlt_version/: storage.sqlite
workshops/dlt/db.qdrant/collection/zoomcamp_tagged_data_zoomcamp_data/: storage.sqlite
