[project]
name = "llm-zoomcamp-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[qdrant]>=1.20.0",
    "elasticsearch==8.19",
    "fastmcp>=2.14.2",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "numpy==2.3.5",
    "openai>=2.41.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.5",
    "rouge>=1.0.1",
    "scikit-learn>=1.8.0",
    "tiktoken>=0.12.0",
    "toyaikit>=0.0.11",
    "tqdm>=4.67.1",
]
