[project]
name = "llm-zoomcamp-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlt[qdrant]>=1.20.0",
    "elasticsearch==8.19",
    "fastmcp>=2.14.2",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "numpy==2.3.5",
    "onnxruntime>=1.23.2",
    "openai>=2.41.0",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.1",
    "qdrant-client[fastembed]>=1.14.2",
    "requests>=2.32.5",
    "rouge>=1.0.1",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "sqlitesearch>=0.1.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "toyaikit>=0.0.11",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.16.1",
]
